# c-plus-plus-for-dummies

./: .gitignore  CMakeLists.txt  README.md
0_Introduction/: CMakeLists.txt  hello.cpp
1. Basics/: CMakeLists.txt
1. Basics/10. Expressions/: expression.cpp
1. Basics/11. My Application/: multiplier.cpp
1. Basics/12. String Concatenation/: str_concat.cpp
1. Basics/13. Maths/: maths.cpp
1. Basics/2. Comments/: comment.cpp
1. Basics/3. Variables/: variable.cpp
1. Basics/4. Assignments/: assignment.cpp
1. Basics/5. Input Output/: inout.cpp
1. Basics/7. Conventions/: conventions.cpp
10. Statements/: CMakeLists.txt
10. Statements/11. Memory Allocation Methods/: mem_alloc_methods.cpp
10. Statements/12. Dynamic Arrays/: dynamic_array.cpp
10. Statements/12. Dynamic Arrays/Excersise/: arraylist.cpp  arraylist.h  main.cpp
10. Statements/13. For Each/: for_each.cpp
10. Statements/8. Pointers/3. Types/: void_pointer.cpp
10. Statements/8. Pointers/4. Pointer to Pointer/: pointer_to_pointer.cpp
10. Statements/8. Pointers/5. Function Arguments/: fn_args.cpp
10. Statements/8. Pointers/6. Arrays/: fn_args_arrays.cpp
10. Statements/8. Pointers/7. Char Arrays/: pointer_char_array.cpp
13. Operator Overloading/: CMakeLists.txt
13. Operator Overloading/3. Operator Overloading/: operator_overload.cpp
1_Starting/: hello1.cpp
2. Functions Files/: CMakeLists.txt
2. Functions Files/1. Function Intro/: functions_intro.cpp
2. Functions Files/10. Header/: add.cpp  main.cpp
2. Functions Files/11. Quiz/: io.cpp  io.h  main.cpp  math.cpp  math.h
2. Functions Files/2. Function Parameters/: functions_params.cpp
2. Functions Files/6. Function Forward Declaration/: forward_dec.cpp
2. Functions Files/7. Multiple Files/: main.cpp
20. Advanced/20. Generics/: generics.cpp
20. Advanced/21. Pointers/: pointers.cpp
20. Advanced/21. Pointers/1. Introduction/: pointers.cpp
20. Advanced/21. Pointers/2. Arithmetic/: pointer_math.cpp
20. Advanced/21. Pointers/3. Types/: pointer_types.cpp
20. Advanced/21. Pointers/6. Arrays/: pointer_arrays.cpp
20. Advanced/21. Pointers/7. Char Arrays/: pointer_char_array.cpp  pointers_and_arrays.cpp
20. Advanced/21. Pointers/8. Multi-Array/: pointers_and_multiarrays.cpp
20. Link Libraries/: CMakeLists.txt  hello.cpp  main.cpp
22. Classes/: CMakeLists.txt
22. Classes/1. Basic/: animal.cpp  animal.h  main.cpp
22. Classes/2. Attributes/: animal.cpp  animal.h  main.cpp
4. Datatypes/: CMakeLists.txt
4. Datatypes/10. If/: if_statements.cpp
4. Datatypes/12. Casts/: casts.cpp
4. Datatypes/15. Const and Constexpr/: consts.cpp
4. Datatypes/2. Void Datatype/: void_datatype.cpp
4. Datatypes/20. Mixed/: mixed.cpp
4. Datatypes/20. Strings/: strings.cpp
4. Datatypes/21. Array/: arrays.cpp
4. Datatypes/22. Vector/: vector.cpp
4. Datatypes/3. Size/: size.cpp
4. Datatypes/4. Integer Division/: int_divison.cpp
4. Datatypes/5. Unsigned/: unsigned.cpp
4. Datatypes/6. Fixed Width Ints/: fixed_width_ints.cpp
4. Datatypes/9. Bools/: bools.cpp  bools.h
5. Operators/: CMakeLists.txt
5. Operators/3. Modulo and Exponentiation/: mod_and_exp.cpp
5. Operators/5. Comma and Conditional operator/: comma_and_cond_op.cpp
5.5 Bits/: CMakeLists.txt
5.5 Bits/1. Bit Set/: bitsets.cpp
5.5 Bits/2. Binary/: binary.cpp
6. Scopes/: CMakeLists.txt
6. Scopes/2. Namespaces/: foo.cpp  foo.h  goo.cpp  goo.h  main.cpp
8. Method Overloads/: CMakeLists.txt
8. Method Overloads/12. Defaults/: defaults.cpp
8. Method Overloads/15. Generics/: generics.cpp
