add_executable(structure
        "1, Structure/hello.cpp")

add_executable(comment
        "2. Comments/comment.cpp")

add_executable(variable
        "3. Variables/variable.cpp")

add_executable(assignment
        "4. Assignments/assignment.cpp")

add_executable(inout
        "5. Input Output/inout.cpp")

add_executable(uninitialized
        "6. Uninitialized/uninitialized.cpp")

add_executable(conventions
        "7. Conventions/conventions.cpp")

add_executable(expression
        "10. Expressions/expression.cpp")

add_executable(multiplier
        "11. My Application/multiplier.cpp")

add_executable(str_concat
        "12. String Concatenation/str_concat.cpp")

add_executable(maths
        "13. Maths/maths.cpp")
