add_executable(pointers
        "8. Pointers/1. Introduction/pointers.cpp")

add_executable(pointers_math
        "8. Pointers/2. Arithmetic/pointer_math.cpp")

add_executable(void_pointers
        "8. Pointers/3. Types/void_pointer.cpp")

add_executable(pointers_types
        "8. Pointers/3. Types/pointer_types.cpp")

add_executable(pointer_to_pointer
        "8. Pointers/4. Pointer to Pointer/pointer_to_pointer.cpp")

add_executable(fn_args
        "8. Pointers/5. Function Arguments/fn_args.cpp")

add_executable(fn_args_arrays
        "8. Pointers/6. Arrays/fn_args_arrays.cpp")

add_executable(pointers_arrays
        "8. Pointers/6. Arrays/pointer_arrays.cpp")

add_executable(pointers_char_array
        "8. Pointers/7. Char Arrays/pointer_char_array.cpp")

add_executable(pointers_and_arrays
        "8. Pointers/7. Char Arrays/pointers_and_arrays.cpp")

add_executable(pointers_and_multiarrays
        "8. Pointers/8. Multi-Array/pointers_and_multiarrays.cpp")

add_executable(mem_alloc_methods
        "11. Memory Allocation Methods/mem_alloc_methods.cpp")

add_executable(dynamic_array
        "12. Dynamic Arrays/dynamic_array.cpp")

add_executable(arraylists
        "12. Dynamic Arrays/Excersise/main.cpp"
        "12. Dynamic Arrays/Excersise/arraylist.cpp")

add_executable(for_each
        "13. For Each/for_each.cpp")