add_executable(functions_intro
        "1. Function Intro/functions_intro.cpp")

add_executable(functions_params
        "2. Function Parameters/functions_params.cpp")

add_executable(forward_dec
        "6. Function Forward Declaration/forward_dec.cpp")

add_executable(multiple_files
        "7. Multiple Files/main.cpp"
        "7. Multiple Files/io.cpp")

add_executable(headered
        "10. Header/main.cpp"
        "10. Header/add.cpp")

add_executable(quiz
        "11. Quiz/main.cpp"
        "11. Quiz/io.cpp"
        "11. Quiz/math.cpp")
