add_executable(void_datatype
        "2. Void Datatype/void_datatype.cpp")

add_executable(sizes
        "3. Size/size.cpp")

add_executable(int_division
        "4. Integer Division/int_divison.cpp")

add_executable(unsigned
        "5. Unsigned/unsigned.cpp")

add_executable(fixed_width_ints
        "6. Fixed Width Ints/fixed_width_ints.cpp")

add_executable(bools
        "9. Bools/bools.cpp")

add_executable(ifs
        "10. If/if_statements.cpp")

add_executable(casts
        "12. Casts/casts.cpp")

add_executable(consts
        "15. Const and Constexpr/consts.cpp")

add_executable(mixed
        "20. Mixed/mixed.cpp")

add_executable(strings
        "20. Strings/strings.cpp")

add_executable(arrays
        "21. Array/arrays.cpp")

add_executable(vectors
        "22. Vector/vector.cpp")
